--- a/gradle.properties
+++ b/gradle.properties
@@ -2,16 +2,16 @@
 org.gradle.jvmargs=-Xmx3G
 org.gradle.daemon=false
 # IBE Editor
-minecraft_version=1.18.1
+minecraft_version=1.18.2
 archives_base_name=IBEEditor
-mod_version=2.0.10
+mod_version=2.1.0
 maven_group=com.github.franckyi.ibeeditor
 # Fabric https://fabricmc.net/develop/
-fabric_loader_version=0.12.12
-fabric_api_version=0.46.2+1.18
+fabric_loader_version=0.14.7
+fabric_api_version=0.55.1+1.18.2
 # Forge https://files.minecraftforge.net/
-forge_version=39.0.44
+forge_version=40.1.51
 # Build and release info
 java_version=17
 major_minecraft_version=1.18
-compatible_minecraft_versions=["1.18", "1.18.1"]
+compatible_minecraft_versions=["1.18", "1.18.1", "1.18.2"]
