--- a/forge/src/main/resources/META-INF/mods.toml
+++ b/forge/src/main/resources/META-INF/mods.toml
@@ -1,5 +1,5 @@
 modLoader = "javafml"
-loaderVersion = "[38,)"
+loaderVersion = "[41,)"
 license = "MIT"
 issueTrackerURL = "https://github.com/Franckyi/IBE-Editor/issues"
 logoFile = "logo.png"
@@ -8,7 +8,7 @@ logoFile = "logo.png"
 modId = "ibeeditor"
 version = "${version}"
 displayName = "IBE Editor"
-updateJSONURL = "https://raw.githubusercontent.com/Franckyi/IBE-Editor/master/forge_update.json"
+updateJSONURL = "https://raw.githubusercontent.com/Franckyi/IBE-Editor/1.19/forge_update.json"
 displayURL = "https://www.curseforge.com/minecraft/mc-mods/ibe-editor"
 credits = "Thanks to Emex for the logo !"
 authors = "Franckyi"
@@ -17,13 +17,13 @@ description = "Simple GUI Mod to edit an item, a block or an entity in your curr
 [[dependencies.ibeeditor]]
 modId = "forge"
 mandatory = true
-versionRange = "[38,)"
+versionRange = "[41,)"
 ordering = "NONE"
 side = "BOTH"
 
 [[dependencies.ibeeditor]]
 modId = "minecraft"
 mandatory = true
-versionRange = "[1.18,)"
+versionRange = "[1.19,)"
 ordering = "NONE"
 side = "BOTH"
