--- a/gradle.properties
+++ b/gradle.properties
@@ -2,16 +2,16 @@
 org.gradle.jvmargs=-Xmx3G
 org.gradle.daemon=false
 # IBE Editor
-minecraft_version=1.18.2
+minecraft_version=1.19
 archives_base_name=IBEEditor
 mod_version=2.1.0
 maven_group=com.github.franckyi.ibeeditor
 # Fabric https://fabricmc.net/develop/
-fabric_loader_version=0.14.7
-fabric_api_version=0.55.1+1.18.2
+fabric_loader_version=0.14.8
+fabric_api_version=0.56.0+1.19
 # Forge https://files.minecraftforge.net/
-forge_version=40.1.51
+forge_version=41.0.38
 # Build and release info
 java_version=17
-major_minecraft_version=1.18
-compatible_minecraft_versions=["1.18", "1.18.1", "1.18.2"]
+major_minecraft_version=1.19
+compatible_minecraft_versions=["1.19"]
