fix: letter added at the end of a formatted text input is not formatted when saving

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -7,6 +7,9 @@ on:
       - '1.18'
     paths-ignore:
       - 'README.md'
+      - 'LICENSE'
+      - 'versions.json'
+      - 'forge_update.json'
 
 jobs:
   release:
