--- a/forge/src/main/resources/META-INF/mods.toml
+++ b/forge/src/main/resources/META-INF/mods.toml
@@ -8,7 +8,7 @@ logoFile = "logo.png"
 modId = "ibeeditor"
 version = "${version}"
 displayName = "IBE Editor"
-updateJSONURL = "https://raw.githubusercontent.com/Franckyi/IBE-Editor/master/forge_update.json"
+updateJSONURL = "https://raw.githubusercontent.com/Franckyi/IBE-Editor/1.18/forge_update.json"
 displayURL = "https://www.curseforge.com/minecraft/mc-mods/ibe-editor"
 credits = "Thanks to Emex for the logo !"
 authors = "Franckyi"
