--- a/gradle.properties
+++ b/gradle.properties
@@ -2,16 +2,16 @@
 org.gradle.jvmargs=-Xmx3G
 org.gradle.daemon=false
 # IBE Editor
-minecraft_version=1.19
+minecraft_version=1.19.2
 archives_base_name=IBEEditor
-mod_version=2.1.2
+mod_version=2.2.0
 maven_group=com.github.franckyi.ibeeditor
 # Fabric https://fabricmc.net/develop/
-fabric_loader_version=0.14.8
-fabric_api_version=0.58.0+1.19
+fabric_loader_version=0.14.9
+fabric_api_version=0.60.0+1.19.2
 # Forge https://files.minecraftforge.net/
-forge_version=41.0.109
+forge_version=43.1.3
 # Build and release info
 java_version=17
 major_minecraft_version=1.19
-compatible_minecraft_versions=["1.19"]
+compatible_minecraft_versions=["1.19", "1.19.1", "1.19.2"]
