feat: wrap and format SNBT text (#27)

--- a/forge/build.gradle
+++ b/forge/build.gradle
@@ -16,6 +16,7 @@ configurations {
 
 loom {
     forge {
+        accessTransformer("src/main/resources/META-INF/accesstransformer.cfg")
         mixinConfig "ibeeditor-common.mixins.json"
     }
 }
