--- a/fabric/build.gradle
+++ b/fabric/build.gradle
@@ -14,6 +14,10 @@ architectury {
     fabric()
 }
 
+loom {
+    accessWidenerPath = file("src/main/resources/ibeeditor.accesswidener")
+}
+
 configurations {
     common
     shadowCommon // Don't use shadow from the shadow plugin because we don't want IDEA to index this.
