--- a/fabric/build.gradle
+++ b/fabric/build.gradle
@@ -1,5 +1,6 @@
 plugins {
     id "com.github.johnrengelman.shadow" version "7.0.0"
+    id "me.shedaniel.unified-publishing"
 }
 
 repositories {
@@ -29,7 +30,7 @@ configurations {
 dependencies {
     modImplementation "net.fabricmc:fabric-loader:${rootProject.fabric_loader_version}"
     modApi "net.fabricmc.fabric-api:fabric-api:${rootProject.fabric_api_version}"
-    modImplementation "com.terraformersmc:modmenu:5.0.2"
+    modImplementation "com.terraformersmc:modmenu:${rootProject.modmenu_version}"
 
     common(project(path: ":common", configuration: "namedElements")) { transitive false }
     shadowCommon(project(path: ":common", configuration: "transformProductionFabric")) { transitive false }
@@ -81,5 +82,40 @@ publishing {
     // See https://docs.gradle.org/current/userguide/publishing_maven.html for information on how to set up publishing.
     repositories {
         // Add repositories to publish to here.
+    }
+}
+
+unifiedPublishing {
+    project {
+        displayName = "IBE Editor v${rootProject.version} for Fabric ${rootProject.minecraft_version}"
+        releaseType = versionInfoType
+        changelog = versionInfoChangelog
+        compatibleGameVersions.each { gameVersions.add it }
+        gameLoaders = ["fabric"]
+        mainPublication tasks.remapJar
+        relations {
+            depends {
+                curseforge = "fabric-api"
+                modrinth = "fabric-api"
+            }
+        }
+
+        var CURSE_API_KEY = project.findProperty("curseforge_token") ?: System.getenv("CURSEFORGE_TOKEN")
+        if (CURSE_API_KEY != null) {
+            curseforge {
+                token = CURSE_API_KEY
+                id = curseforgeProjectId
+                gameVersions.add "Java ${rootProject.java_version}"
+            }
+        }
+
+        var MODRINTH_TOKEN = project.findProperty("modrinth_token") ?: System.getenv("MODRINTH_TOKEN")
+        if (MODRINTH_TOKEN != null) {
+            modrinth {
+                token = MODRINTH_TOKEN
+                id = modrinthProjectId
+                version = "${rootProject.version}+${rootProject.major_minecraft_version}-fabric"
+            }
+        }
     }
 }
