--- a/forge/src/main/resources/META-INF/mods.toml
+++ b/forge/src/main/resources/META-INF/mods.toml
@@ -1,29 +1,29 @@
 modLoader = "javafml"
-loaderVersion = "[44,)"
+loaderVersion = "[45,)"
 license = "MIT"
-issueTrackerURL = "https://github.com/Franckyi/IBE-Editor/issues"
+issueTrackerURL = "https://github.com/skyecodes/IBE-Editor/issues"
 logoFile = "logo.png"
 
 [[mods]]
 modId = "ibeeditor"
 version = "${version}"
 displayName = "IBE Editor"
-updateJSONURL = "https://raw.githubusercontent.com/Franckyi/IBE-Editor/1.19.3/forge_update.json"
+updateJSONURL = "https://raw.githubusercontent.com/skyecodes/IBE-Editor/1.19.4/forge_update.json"
 displayURL = "https://www.curseforge.com/minecraft/mc-mods/ibe-editor"
 credits = "Emex (logo)"
-authors = "Franckyi"
+authors = "skyecodes"
 description = "Simple GUI Mod to edit an item, a block or an entity in your current world"
 
 [[dependencies.ibeeditor]]
 modId = "forge"
 mandatory = true
-versionRange = "[44,)"
+versionRange = "[45,)"
 ordering = "NONE"
 side = "BOTH"
 
 [[dependencies.ibeeditor]]
 modId = "minecraft"
 mandatory = true
-versionRange = "[1.19.3,)"
+versionRange = "[1.19.4,)"
 ordering = "NONE"
 side = "BOTH"
