--- a/gradle.properties
+++ b/gradle.properties
@@ -2,16 +2,17 @@
 org.gradle.jvmargs=-Xmx3G
 org.gradle.daemon=false
 # IBE Editor
-minecraft_version=1.19.3
+minecraft_version=1.19.4
 archives_base_name=IBEEditor
 mod_version=2.2.2
 maven_group=com.github.franckyi.ibeeditor
 # Fabric https://fabricmc.net/develop/
-fabric_loader_version=0.14.11
-fabric_api_version=0.69.1+1.19.3
+fabric_loader_version=0.14.18
+fabric_api_version=0.76.0+1.19.4
+modmenu_version=6.1.0-rc.4
 # Forge https://files.minecraftforge.net/
-forge_version=44.0.37
+forge_version=45.0.27
 # Build and release info
 java_version=17
-major_minecraft_version=1.19.3
-compatible_minecraft_versions=["1.19.3"]
+major_minecraft_version=1.19.4
+compatible_minecraft_versions=["1.19.4"]
