--- a/gradle.properties
+++ b/gradle.properties
@@ -2,17 +2,17 @@
 org.gradle.jvmargs=-Xmx3G
 org.gradle.daemon=false
 # IBE Editor
-minecraft_version=1.19.4
+minecraft_version=1.20
 archives_base_name=IBEEditor
-mod_version=2.2.2
+mod_version=2.2.3
 maven_group=com.github.franckyi.ibeeditor
 # Fabric https://fabricmc.net/develop/
-fabric_loader_version=0.14.18
-fabric_api_version=0.76.0+1.19.4
-modmenu_version=6.1.0-rc.4
+fabric_loader_version=0.14.21
+fabric_api_version=0.83.0+1.20
+modmenu_version=7.0.1
 # Forge https://files.minecraftforge.net/
-forge_version=45.0.27
+forge_version=46.0.13
 # Build and release info
 java_version=17
-major_minecraft_version=1.19.4
-compatible_minecraft_versions=["1.19.4"]
+major_minecraft_version=1.20
+compatible_minecraft_versions=["1.20"]
