--- a/gradle.properties
+++ b/gradle.properties
@@ -1,18 +1,18 @@
 # Gradle
-org.gradle.jvmargs=-Xmx3G
+org.gradle.jvmargs=-Xmx4G
 org.gradle.daemon=false
 # IBE Editor
-minecraft_version=1.20
+minecraft_version=1.20.2
 archives_base_name=IBEEditor
-mod_version=2.2.3
+mod_version=2.2.4
 maven_group=com.github.franckyi.ibeeditor
 # Fabric https://fabricmc.net/develop/
-fabric_loader_version=0.14.21
-fabric_api_version=0.83.0+1.20
-modmenu_version=7.0.1
+fabric_loader_version=0.14.24
+fabric_api_version=0.90.7+1.20.2
+modmenu_version=8.0.0-beta.2
 # Forge https://files.minecraftforge.net/
-forge_version=46.0.13
+forge_version=48.0.34
 # Build and release info
 java_version=17
-major_minecraft_version=1.20
-compatible_minecraft_versions=["1.20"]
+major_minecraft_version=1.20.2
+compatible_minecraft_versions=["1.20.2"]
