--- a/build.gradle
+++ b/build.gradle
@@ -69,7 +69,7 @@ githubRelease {
     setOwner("skyecodes")
     setRepo("IBE-Editor")
     setTagName("${version}+${rootProject.major_minecraft_version}")
-    setTargetCommitish(rootProject.major_minecraft_version as String)
+    setTargetCommitish(findProperty("git_branch") as String ?: System.getenv("GIT_BRANCH"))
     setReleaseName("IBE Editor v${version} for Minecraft ${rootProject.minecraft_version}")
     setBody(versionInfoChangelog)
     setPrerelease(versionInfoType == "alpha")
