--- a/build.gradle
+++ b/build.gradle
@@ -3,8 +3,9 @@ import groovy.json.JsonSlurper
 plugins {
     id "architectury-plugin" version "3.4-SNAPSHOT"
     id "dev.architectury.loom" version "1.4-SNAPSHOT" apply false
+    id "net.darkhax.curseforgegradle" version "1.0.10"
     id "me.shedaniel.unified-publishing" version "0.1.+" apply false
-    id "com.github.breadmoirai.github-release" version "2.2.12"
+    id "com.github.breadmoirai.github-release" version "2.4.1"
 }
 
 architectury {
