--- a/gradle.properties
+++ b/gradle.properties
@@ -12,6 +12,8 @@ fabric_api_version=0.90.7+1.20.2
 modmenu_version=8.0.0-beta.2
 # Forge https://files.minecraftforge.net/
 forge_version=48.0.34
+# NeoForge https://neoforged.net/
+neoforge_version=20.2.56-beta
 # Build and release info
 java_version=17
 major_minecraft_version=1.20.2
