--- a/gradle.properties
+++ b/gradle.properties
@@ -4,16 +4,16 @@ org.gradle.daemon=false
 # IBE Editor
 minecraft_version=1.20.2
 archives_base_name=IBEEditor
-mod_version=2.2.5
+mod_version=2.2.6
 maven_group=com.github.franckyi.ibeeditor
 # Fabric https://fabricmc.net/develop/
 fabric_loader_version=0.14.24
 fabric_api_version=0.90.7+1.20.2
-modmenu_version=8.0.0-beta.2
+modmenu_version=8.0.0
 # Forge https://files.minecraftforge.net/
-forge_version=48.0.34
+forge_version=48.0.40
 # NeoForge https://neoforged.net/
-neoforge_version=20.2.56-beta
+neoforge_version=20.2.62-beta
 # Build and release info
 java_version=17
 major_minecraft_version=1.20.2
