feat: 1.20.4 update, added Armor Trims hide flag, fixed unremovable lore bug

--- a/common/build.gradle
+++ b/common/build.gradle
@@ -8,6 +8,10 @@ architectury {
     common("fabric", "forge", "neoforge")
 }
 
+loom {
+    accessWidenerPath = file("src/main/resources/ibeeditor.accesswidener")
+}
+
 publishing {
     publications {
         mavenCommon(MavenPublication) {
