--- a/gradle.properties
+++ b/gradle.properties
@@ -2,19 +2,19 @@
 org.gradle.jvmargs=-Xmx4G
 org.gradle.daemon=false
 # IBE Editor
-minecraft_version=1.20.2
+minecraft_version=1.20.4
 archives_base_name=IBEEditor
-mod_version=2.2.6
+mod_version=2.2.7
 maven_group=com.github.franckyi.ibeeditor
 # Fabric https://fabricmc.net/develop/
-fabric_loader_version=0.14.24
-fabric_api_version=0.90.7+1.20.2
-modmenu_version=8.0.0
+fabric_loader_version=0.15.2
+fabric_api_version=0.91.2+1.20.4
+modmenu_version=9.0.0-pre.1
 # Forge https://files.minecraftforge.net/
-forge_version=48.0.40
+forge_version=49.0.9
 # NeoForge https://neoforged.net/
-neoforge_version=20.2.62-beta
+neoforge_version=20.4.24-beta
 # Build and release info
 java_version=17
-major_minecraft_version=1.20.2
-compatible_minecraft_versions=["1.20.2"]
+major_minecraft_version=1.20.4
+compatible_minecraft_versions=["1.20.4"]
