--- a/neoforge/src/main/resources/META-INF/accesstransformer.cfg
+++ b/neoforge/src/main/resources/META-INF/accesstransformer.cfg
@@ -1,1 +1,3 @@
-public-f net.minecraft.client.gui.components.MultilineTextField f_238603_ # width
+public-f net.minecraft.client.gui.components.MultilineTextField width
+public net.minecraft.client.gui.components.Checkbox <init>(IILnet/minecraft/network/chat/Component;Lnet/minecraft/client/gui/Font;ZLnet/minecraft/client/gui/components/Checkbox$OnValueChange;)V
+public-f net.minecraft.client.gui.components.AbstractWidget render(Lnet/minecraft/client/gui/GuiGraphics;IIF)V
