--- a/gradle.properties
+++ b/gradle.properties
@@ -4,7 +4,7 @@ org.gradle.daemon=false
 # IBE Editor
 minecraft_version=1.20
 archives_base_name=IBEEditor
-mod_version=2.2.3
+mod_version=2.2.8
 maven_group=com.github.franckyi.ibeeditor
 # Fabric https://fabricmc.net/develop/
 fabric_loader_version=0.14.21
@@ -15,4 +15,4 @@ forge_version=46.0.13
 # Build and release info
 java_version=17
 major_minecraft_version=1.20
-compatible_minecraft_versions=["1.20"]
+compatible_minecraft_versions=["1.20", "1.20.1"]
